[package]
name = "text_on_png"
version = "0.1.0"
authors = ["aunpyz <aunnop_kattiyanet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cairo-rs]
version = "0.9.1"
features = [ "png" ]

[dependencies]
pango = "0.9.1"
pangocairo = "0.10.0"